02-first-cluster/httpbin-manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  to:
    kind: Service
    name: httpbin
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
